# plainte

./: .gitignore  README.md
Demos/: 1stDemo.pptx
week-01/: readme.txt
week-01/day-02/: changes.txt
week-01/day-2/: changes.txt  readme.txt
week-01/day-2/fifth/: fifth.txt
week-01/day-2/first/: first.txt
week-01/day-2/fourth/: fourth.txt
week-01/day-2/second/: second.txt
week-01/day-2/third/: third.txt
week-01/day-3/BMI/: main.cpp
week-01/day-3/animalsandlegs/: CMakeLists.txt  main.cpp
week-01/day-3/averageofinput/: CMakeLists.txt  main.cpp
week-01/day-3/codinghours/: main.cpp
week-01/day-3/conditional_variable_mutation/: main.cpp
week-01/day-3/count-from-to/: main.cpp
week-01/day-3/cuboid/: main.cpp
week-01/day-3/define-basic-info/: main.cpp
week-01/day-3/draw-diamond/: CMakeLists.txt  main.cpp
week-01/day-3/draw-pyramid/: main.cpp
week-01/day-3/draw-triangle/: main.cpp
week-01/day-3/fav_number/: CMakeLists.txt  main.cpp
week-01/day-3/fizz_buzz/: main.cpp
week-01/day-3/guess_the_number/: main.cpp
week-01/day-3/hello_user/: main.cpp
week-01/day-3/hellome/: main.cpp
week-01/day-3/helloothers/: CMakeLists.txt  main.cpp
week-01/day-3/humptydumpty/: CMakeLists.txt  main.cpp
week-01/day-3/introduceyourself/: CMakeLists.txt  main.cpp
week-01/day-3/iwontcheatonexams/: CMakeLists.txt  main.cpp
week-01/day-3/miletokm/: main.cpp
week-01/day-3/multiplication_table/: main.cpp
week-01/day-3/oddeven/: CMakeLists.txt  main.cpp
week-01/day-3/onetwoalot/: CMakeLists.txt  main.cpp
week-01/day-3/parametric-average/: main.cpp
week-01/day-3/party-indicator/: main.cpp
week-01/day-3/print-bigger/: main.cpp
week-01/day-3/print-even/: main.cpp
week-01/day-3/secondinaday/: CMakeLists.txt  main.cpp
week-01/day-3/swap/: main.cpp
week-01/day-3/two_numbers/: main.cpp
week-01/day-3/variablemutation/: main.cpp
week-01/day-4/append-a/: main.cpp
week-01/day-4/append-a-func/: main.cpp
week-01/day-4/change-element/: main.cpp
week-01/day-4/colors/: CMakeLists.txt  main.cpp
week-01/day-4/compare-length/: CMakeLists.txt  main.cpp
week-01/day-4/diagonal-matrix/: main.cpp
week-01/day-4/double-items/: main.cpp
week-01/day-4/doubling/: main.cpp
week-01/day-4/factorio/: main.cpp
week-01/day-4/functions-and-arrays/: main.cpp
week-01/day-4/greet/: main.cpp
week-01/day-4/increment/: main.cpp
week-01/day-4/printelements/: CMakeLists.txt  main.cpp
week-01/day-4/reverse-list/: CMakeLists.txt  main.cpp
week-06/day-1/cuboid/: CMakeLists.txt  main.c
week-06/day-1/cuboid/cuboid_lib/: CMakeLists.txt  cuboid.c  cuboid.h
week-06/day-1/cuboid/cuboid_tests/: CMakeLists.txt  cuboid_tests.cpp
week-09/RGB_LEDs/: initialization.c  initialization.h  main.c  system_clock_config.h
week-09/Railway-crossing/: initializations.h  main.c  systemclock_config.c
(+376 files in other folders)
