cmake_minimum_required(VERSION 3.13)
project(cuboid C)
set(CMAKE_C_STANDARD 99)

# Change this to the name of the directory that contains your code
set(PROJECT_LIB_NAME cuboid_lib)

# Change this to the name of the directory that contains your tests
set(PROJECT_TESTS_NAME cuboid_tests)

# Change this to the path where you extracted the Google Test files to
set(PATH_TO_GOOGLETEST "C:/Users/molna/Desktop/greenfox/googletest-release-1.8.1")

# Change this to your project name (optional)
set(PROJECT_NAME cuboid)

# The next line creates an executable file from main.cpp with the same name as your project
add_executable(${PROJECT_NAME} main.c)

# This block includes the subdirectories containing your code and tests
include_directories(${PROJECT_LIB_NAME})
add_subdirectory(${PROJECT_LIB_NAME})
add_subdirectory(${PROJECT_TESTS_NAME})

# This line links your code to the main executable
target_link_libraries(${PROJECT_NAME} ${PROJECT_LIB_NAME})